samples/_failures_safe/1761306223_1a4801_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b0c54471.c: In function ‘main’:
./samples/SAFE/__tmp_b0c54471.c:156:9: error: expected expression at end of input
  156 |         for (size_t i =
      |         ^~~
./samples/SAFE/__tmp_b0c54471.c:156:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b0c54471.c:156:9: error: expected declaration or statement at end of input
